src/test/ui/or-patterns/while-parsing-this-or-pattern.stderr
error: expected pattern, found `.`
  --> $DIR/while-parsing-this-or-pattern.rs:5:20
   |
LL |         Some(42) | .=. => {}
   |         --------   ^ expected pattern
   |         |
   |         while parsing this or-pattern staring here

error: aborting due to previous error

